--- a/src/components/FormVisitor/style.module.scss
+++ b/src/components/FormVisitor/style.module.scss
@@ -6,6 +6,7 @@
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 5px;
   background: #fff;
+  width: 400px;
 
   h2 {
     font-size: 1.25rem;
@@ -14,10 +15,13 @@
   .formInput {
     display: flex;
     flex-direction: column;
-    gap: .25rem;
+    gap: 0.25rem;
+    width: 100%;
+    min-width: 50%;
+    
 
     label {
-      font-size: .85rem;
+      font-size: 0.85rem;
       font-weight: 600;
     }
 
@@ -25,11 +29,71 @@
       height: 2rem;
       border: 1px solid #ddd;
       border-radius: 4px;
+      width: 100%;
     }
+
+    select {
+      height: 2rem;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      
+
+      option {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+
+      &:disabled {
+        cursor: not-allowed;
+      }
+    }
+
+    
   }
 
   .columnInput {
     display: flex;
-    gap: 1rem;
+    gap: .5rem;
+    width: 100%;
+
+    .formInputFirst {
+      display: flex;
+      flex-direction: column;
+      gap: 0.25rem;
+      width: 10rem;
+
+      label {
+        font-size: 0.85rem;
+        font-weight: 600;
+      }
+
+      select {
+        height: 2rem;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        
+  
+        option {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+  
+        &:disabled {
+          cursor: not-allowed;
+        }
+      }
+    }
+  }
+
+  .submitBtn {
+    background: #172554;
+    border: none;
+    border-radius: 5px;
+    padding: .75rem 0;
+    font-weight: 600;
+    font-size: 1rem;
+    color: #fff;
   }
 }
