--- a/src/components/FormVisitor/style.module.scss
+++ b/src/components/FormVisitor/style.module.scss
@@ -1,99 +1,143 @@
-.form {
+.formComponent {
   display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  padding: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  border-radius: 5px;
-  background: #fff;
-  width: 400px;
+  z-index: 1000;
+  position: relative;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  
 
-  h2 {
-    font-size: 1.25rem;
-  }
-
-  .formInput {
+  .form {
     display: flex;
     flex-direction: column;
-    gap: 0.25rem;
-    width: 100%;
-    min-width: 50%;
-    
+    gap: 1rem;
+    padding: 2rem;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 5px;
+    background: rgba(255, 255, 255, 0.9);
+    width: 450px;
+    z-index: 1000;
 
-    label {
-      font-size: 0.85rem;
-      font-weight: 600;
+    h2 {
+      font-size: 1.25rem;
     }
 
-    input {
-      height: 2rem;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      width: 100%;
-    }
-
-    select {
-      height: 2rem;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      
-
-      option {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
-
-      &:disabled {
-        cursor: not-allowed;
-      }
-    }
-
-    
-  }
-
-  .columnInput {
-    display: flex;
-    gap: .5rem;
-    width: 100%;
-
-    .formInputFirst {
+    .formInput {
       display: flex;
       flex-direction: column;
       gap: 0.25rem;
-      width: 10rem;
+      width: 100%;
+      min-width: 50%;
 
       label {
         font-size: 0.85rem;
         font-weight: 600;
       }
 
+      input {
+        height: 2rem;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        width: 100%;
+        padding: 0 0.5rem;
+      }
+
       select {
         height: 2rem;
         border: 1px solid #ddd;
         border-radius: 4px;
-        
-  
-        option {
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-        }
-  
+
         &:disabled {
           cursor: not-allowed;
         }
       }
+
+      span {
+        font-size: 0.8rem;
+        padding: 0 0.25rem;
+        color: #fd103d;
+      }
+    }
+
+    .formInput.inputWithError {
+      select {
+        outline: 1px solid #fd103d;
+      }
+
+      input {
+        outline: 1px solid #fd103d;
+      }
+    }
+
+    .columnInput {
+      display: flex;
+      gap: 0.5rem;
+      width: 100%;
+
+      .formInputFirst {
+        display: flex;
+        flex-direction: column;
+        gap: 0.25rem;
+        width: 10rem;
+
+        label {
+          font-size: 0.85rem;
+          font-weight: 600;
+        }
+
+        select {
+          height: 2rem;
+          border: 1px solid #ddd;
+          border-radius: 4px;
+
+          option {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+
+          &:disabled {
+            cursor: not-allowed;
+          }
+        }
+
+        span {
+          font-size: 0.8rem;
+          padding: 0 0.25rem;
+          color: #fd103d;
+        }
+      }
+
+      .formInputFirst.inputWithError {
+        select {
+          outline: 1px solid #fd103d;
+        }
+
+        input {
+          outline: 1px solid #fd103d;
+        }
+      }
+    }
+
+    .submitBtn {
+      background: #172554;
+      border: none;
+      border-radius: 5px;
+      padding: 0.75rem 0;
+      font-weight: 600;
+      font-size: 1rem;
+      color: #fff;
     }
   }
 
-  .submitBtn {
-    background: #172554;
-    border: none;
-    border-radius: 5px;
-    padding: .75rem 0;
-    font-weight: 600;
-    font-size: 1rem;
-    color: #fff;
+  .formLoading::after {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.5); 
+    z-index: 9999; 
   }
 }
