--- a/src/pages/Home/style.module.scss
+++ b/src/pages/Home/style.module.scss
@@ -5,4 +5,29 @@
   width: 100%;
   min-height: 100vh;
   background-color: #f4f4f4;
+
+  .logo {
+    position: fixed;
+    z-index: 1000;
+    top: 10px;
+    left: 25px;
+  }
+
+  .videoContainer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+
+  .videoBackground {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
