--- a/src/components/DashboardComponents/StatesChart/style.module.scss
+++ b/src/components/DashboardComponents/StatesChart/style.module.scss
@@ -1,4 +1,16 @@
 .stateComponent {
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   background: rgba(255, 255, 255, 0.95);
+  padding: 1rem;
+  gap: 1rem;
   
+  .headerChart {
+    h3 {
+      font-weight: 600;
+      font-size: 1rem;
+    }
+  }
 }
