--- a/src/pages/Dashboard/style.module.scss
+++ b/src/pages/Dashboard/style.module.scss
@@ -7,8 +7,37 @@
 
   .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
     gap: 1rem;
-    margin: 2rem;
+    padding: 5rem 20rem;
+
+    @media (max-width: 1660px) {
+      grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+      padding: 5rem 15rem;
+    }
+
+    @media (max-width: 1440px) {
+      grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+      padding: 5rem 10rem;
+    }
+
+    @media (max-width: 1200px) {
+      grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+      padding: 5rem 10rem;
+    }
+
+    @media (max-width: 1130px) {
+      padding: 5rem;
+    }
+
+    @media (max-width: 800px) {
+      padding: 2rem;
+    }
+
+    @media (max-width: 470px) {
+      display: flex;
+      flex-direction: column;
+      padding: 0.5rem 0.25rem;
+    }
   }
 }
